add ignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /The Rite of Knowing/addons/godot-git-plugin
+/The Rite of Knowing/Scripts/.vs
